대매뉴 오버효과 추가

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </li>
                     <li>
                         <a href="#">웹접근성</a>
-                        <ul class="web-aceesibility">
+                        <ul class="web-accesibility">
                             <li><a href="#">웹 접근성의 개요</a></li>
                             <li><a href="#">장애 환경의 이해</a></li>
                             <li><a href="#">장차법</a></li>
