--- a/index.html
+++ b/index.html
@@ -134,8 +134,19 @@
                     </dl>
                 </div>
             </div>
-
-            <div class="group group2">콘텐츠컬럼2</div>
+            <div class="group group2">
+                <div class="search">
+                    <h2 class="readable-hidden">통합 검색</h2>
+                    <form action="javascript:alert('검색이 완료되었습니다.');" id="search-form">
+                        <fieldset>
+                            <legend>검색 폼</legend>
+                            <label for="keyword">자료검색</label>
+                            <input type="search-word" id="content-search" required placeholder="검색어를 입력하세요.">
+                            <button type="submit2" class="btn-search">검색</button>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
             <div class="group group3">콘텐츠컬럼3</div>
         </main>
         <article class="slogan">슬로건</article>
