--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </div>
 
                 </div>
-                <div class="news">
+                <section class="news">
                     <h2 class="news-heading">새소식</h2>
                     <article class="news-item">
                         <a href="#">
@@ -216,7 +216,7 @@
                         </a>
                     </article>
                     <a href="#" class="news-more" title="새소식">더보기</a>
-                </div>
+                </section>
             </div>
             <div class="group group3">콘텐츠컬럼3</div>
         </main>
